--- a/music.css
+++ b/music.css
@@ -24,7 +24,7 @@
   position: relative;
   width: 180px;
   height: 180px;
-  margin-bottom: 0.2rem;
+  margin-bottom: 0rem;
   transition: transform 0.3s cubic-bezier(.4,1.6,.4,1);
   cursor: pointer;
   z-index: 1;
@@ -79,11 +79,12 @@
   padding-right: 25px;
 }
 .vinyl-card .playlist-info h4 {
-  margin-bottom: 0.2rem;
+  margin-bottom: 0.5rem;
 }
 
 @media (max-width: 700px) {
   .vinyl-gallery {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 0.5rem;
     margin-top: 1em;
     margin-bottom: 2em;
@@ -97,5 +98,8 @@
   }
   .vinyl:hover .vinyl-disc-img {
     left: 50px;
+  }
+  .playlist-info h4 {
+    font-size: 0.8rem;
   }
 }
