--- a/places.css
+++ b/places.css
@@ -57,6 +57,10 @@
   margin-left: auto;
   margin-right: auto;
 }
+.place-card h4 {
+  margin-bottom: 0.2em;
+}
+
 @media (max-width: 700px) {
   .travel-map { height: 220px; margin-bottom: 1em;}
   .map-buttons button {
