--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ header {
 .header-flex {
   display: flex;
   align-items: center;
-  gap: 2rem;
+  gap: 1.5rem;
 }
 .profile-pic {
   width: 90px;
@@ -101,6 +101,12 @@ h2 {
   font-size: 1.3rem;
   color: #303030;
   font-weight: 600;
+  border-bottom: 5px double #39506b;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+  margin-bottom: 0.5rem;
+  display: inline-block;
+  position: relative;
 }
 h3 {
   font-size: 1rem;
@@ -212,7 +218,7 @@ footer {
   }
   .header-flex {
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.3rem;
     text-align: center;
   }
   .container {
@@ -226,8 +232,8 @@ footer {
     font-size: 1rem;
   }
   .profile-pic {
-    width: 70px;
-    height: 70px;
+    width: 90px;
+    height: 90px;
   }
 }
 
