--- a/photo.css
+++ b/photo.css
@@ -31,7 +31,7 @@
 }
 .polaroid .caption {
   font-family: 'Sarina', cursive;
-  font-size: 1.3rem;
+  font-size: 1rem;
   color: #333;
   margin-top: 0.1rem;
   margin-bottom: 0;
@@ -47,5 +47,5 @@
   transform: scale(1.2) rotate(1deg);
 }
 @media (max-width: 700px) {
-  .polaroid { width: 50%; }
+  .polaroid { width: 50%; height: auto;}
 }
